--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Kévin
-                        <span class="text-primary">Barao Da Silva</span>
+                        <span class="text-primary">Benachour Ihsane</span>
                     </h1>
                     <div class="subheading mb-5">
                         DÉVELOPPEUR FULLSTACK · EXPERT EN INGÉNIERIE DU LOGICIEL
@@ -57,7 +57,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://drive.google.com/file/d/1QFfS9nHdSOfcIkKjLMurbBmjuHX2J2X8/view?usp=share_link"><i class="	far fa-address-card"></i></a>
                         <a class="social-icon" href="https://fr.linkedin.com/in/k%C3%A9vin-barao-da-silva"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/KevinBarao"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/ihsanets6"><i class="fab fa-github"></i></a>
                     </div>
                     
                 </div>
