--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Kévin Barao Da Silva</title>
+        <title>Ihsane Benachour</title>
         <link rel="icon" type="image/x-icon" href="./dist/assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Kévin Barao Da Silva</span>
+                <span class="d-block d-lg-none">Ihsane Benachour</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./dist/assets/img/pdp.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -43,11 +43,11 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Kévin
-                        <span class="text-primary">Benachour Ihsane</span>
+                        Ihsane
+                        <span class="text-primary">Benachour</span>
                     </h1>
                     <div class="subheading mb-5">
-                        DÉVELOPPEUR FULLSTACK · EXPERT EN INGÉNIERIE DU LOGICIEL
+                        INGÉNIEUR CHEF DE PROJET · EXPERT EN ARCHITECTURE DES SYSTEMES D'INFORMATION
                     </div>
                     <p class="lead mb-5">Passionné par le monde du numérique et les innovations technologiques depuis tout petit, j'ai toujours été fasciné par les ordinateurs et les possibilités qu'offre l'univers digital. <br> J'aime explorer de nouvelles technologies et comprendre comment elles peuvent être utilisées pour améliorer notre vie quotidienne.
 
