--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         Je suis également très intéressé par l'impact des technologies sur notre société et notre environnement.<br> Je suis convaincu que les innovations technologiques peuvent contribuer à résoudre de nombreux problèmes complexes auxquels nous sommes confrontés aujourd'hui, mais je suis également conscient des défis et des enjeux éthiques qu'elles posent.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://drive.google.com/file/d/1QFfS9nHdSOfcIkKjLMurbBmjuHX2J2X8/view?usp=share_link"><i class="	far fa-address-card"></i></a>
-                        <a class="social-icon" href="https://fr.linkedin.com/in/k%C3%A9vin-barao-da-silva"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/ihsane-benachour/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/ihsanets6"><i class="fab fa-github"></i></a>
                     </div>
                     
