--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
                     <h2 class="mb-5">EXPÉRIENCES</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><span class="text-primary">GROUPE RENAULT</span> - DÉVELOPPEUR FULLSTACK - Alternance</h3>
-                            <div class="subheading mb-3">Java · Typescript · SpringBoot · Angular</div>
+                            <h3 class="mb-0"><span class="text-primary">CHANGER</span> - CHANGER</h3>
+                            <div class="subheading mb-3">CHANGER</div>
                             <p>
                                 <h5>Rercherche et developement</h5>
                                 · Méthode agile</br>
