--- a/index.html
+++ b/index.html
@@ -671,15 +671,15 @@
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Trappes, 78190, France</p>
+                    <p>Viry-Châtillon, 91170, France</p>
                 </li>
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 06 13 24 02 4</p>
+                    <p>07 71 45 25 02</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>dasilvakevin.pro@gmail.com</p>
+                    <p>benachour@et.intechinfo.fr</p>
                 </li>
             </ul>
         </div>
