--- a/index.html
+++ b/index.html
@@ -531,33 +531,33 @@
                     <h2 class="mb-5">FORMATIONS</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">expert en ingÉnierie du logiciel</h3>
+                            <h3 class="mb-0">Expert en architecture des systèmes d'information</h3>
                             <div class="subheading mb-3 text-primary">INTECH - Groupe ESIEA</div>
                             <p>
-                                Actuellement en 5ème année, semestre 10 – Formation Bac+5 - Titre inscrit au RNCP niveau 7
+                                Formation Architecte Cloud, DevSecOps & Cybersécurité - Titre inscrit au RNCP niveau 7
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mars 2018 - Mars 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mars 2021 - Juillet 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">formation developpeur web</h3>
+                            <h3 class="mb-0">Formation administrateur des systèmes d'information/h3>
                             <div class="subheading mb-3 text-primary">3W Academy</div>
                             <p>
-                                Formation des bases du developpement web – Formation Bac+2 - Titre inscrit au RNCP niveau 3
+                                Formation Administrateur Systèmes, réseaux & sécurité – Formation Bac+3 - Titre inscrit au RNCP niveau 6
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Novembre 2016 - Février 2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 - Février 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Ecole de Microtechniques</h3>
-                            <div class="subheading mb-3 text-primary">Lycée Emilie de Breteuil</div>
+                            <h3 class="mb-0">Lycée général</h3>
+                            <div class="subheading mb-3 text-primary">Lycée Jean-Baptiste Corot</div>
                             <p>
-                                Obtention du baccalauréat professionnel
+                                Obtention du baccalauréat scientifique
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2013 - Juillet 2015</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2013 - Juillet 2017</span></div>
                     </div>
                 </div>
             </section>
@@ -583,8 +583,8 @@
                     <div class="subheading mb-3">LANGUES :</div>
                     <ul>
                         <li>Français : Langue maternelle</li>
-                        <li>Anglais : 665 au TOEIC</li>
-                        <li>Portugais : niveau B2</li>
+                        <li>Anglais : 780 au TOEIC</li>
+                        <li>Espagnol : niveau B2</li>
                     </ul>
                 </div>
             </section>
