formations fait BON

--- a/index.html
+++ b/index.html
@@ -531,23 +531,23 @@
                     <h2 class="mb-5">FORMATIONS</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Expert en architecture des systèmes d'information</h3>
+                            <h3 class="mb-0">Formation INTECH</h3>
                             <div class="subheading mb-3 text-primary">INTECH - Groupe ESIEA</div>
                             <p>
                                 Formation Architecte Cloud, DevSecOps & Cybersécurité - Titre inscrit au RNCP niveau 7
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Mars 2021 - Juillet 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2021 - Juillet 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Formation administrateur des systèmes d'information/h3>
+                            <h3 class="mb-0">Formation INTECH/h3>
                             <div class="subheading mb-3 text-primary">3W Academy</div>
                             <p>
                                 Formation Administrateur Systèmes, réseaux & sécurité – Formation Bac+3 - Titre inscrit au RNCP niveau 6
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 - Février 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 - Juillet 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
