formations fait BON C'est SUR

--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Formation INTECH/h3>
-                            <div class="subheading mb-3 text-primary">3W Academy</div>
+                            <h3 class="mb-0">Formation INTECH</h3>
+                            <div class="subheading mb-3 text-primary">INTECH - Groupe ESIEA</div>
                             <p>
                                 Formation Administrateur Systèmes, réseaux & sécurité – Formation Bac+3 - Titre inscrit au RNCP niveau 6
                             </p>
