--- a/index.html
+++ b/index.html
@@ -485,41 +485,25 @@
                     <ul>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">sang pour cent</span></h3>
-                                <div>Organisateur et chargé de communication - 17 membres</div>
+                                <h3 class="mb-0"><span class="text-primary">BrailleNet</span></h3>
+                                <div>Organisateur et chargé de communication - 4 membres</div>
                                 </br>
-                                <p><b>Projet en deux parties sur deux semestres :</b></p>
+                                <p><b>Projet BrailleNet :</b></p>
                                 <ul>
                                     <li>
                                         Première partie
                                         <ul>
                                             <li>
-                                                Chargé de communication d'une équipe de 4 étudiants, sur le thème "Action de communication"
-                                            </li>
-                                            <li>
-                                                Campagne de communication sur le don de sang et son importance<br>
-                                                🏆1ère place au palmarès des projets de communication février 2019
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        Seconde partie
-                                        <ul>
-                                            <li>
-                                                Campagne de communication sur le don de sang
-                                            </li>
-                                            <li>
-                                                Organisation d'un évènement, une collecte mobile de don de sang avec l'EFS sur le campus de l'école
-                                            </li>
-                                            <li>
-                                                Réalisation d'une application mobile pour l'EFS<br>
-                                                🏆3e place au palmarès des projets de communication juillet 2019 et félicitations de la direction de l'EFS Ile de France
+                                                Mise en place d’un projet et d’un événement ayant pour but
+                                                de sensibiliser les étudiants au handicap visuel mais aussi à
+                                                l’accessibilité numérique pour qu’ils puissent adapter l’accès
+                                                à leurs contenus.
                                             </li>
                                         </ul>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 – Juillet 2019</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2019 – Mars 2020</span></div>
                         </div>
                     </ul>
                 </div>
