--- a/index.html
+++ b/index.html
@@ -432,56 +432,56 @@
                     <ul>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">STARTER HACK</span> - Apllication web</h3>
-                                <div class="subheading mb-3">Kotlin · Typescript · SpringBoot · Angular · Docker · PostgreSQL</div>
-                                <div>Développeur fullstack - 9 membres</div>
+                                <h3 class="mb-0"><span class="text-primary">Hacktivity</span></h3>
+                                <div class="subheading mb-3">OpenVPN · CyberRange</div>
+                                <div>CyberRange - 4 membres</div>
                                 </br>
-                                <p>Développement d'une plateforme d'apprentissage de la cybersécurité sous forme de défis d'exploitations d'environnements vulnérables.</p>
+                                <p>Remise en service de la CyberRange d'Airbus. Création d'environnements de simulation afin d'immerger cette infrastructure pour démontrer et résoudre des failles informatiques.</p>
                             </div>
-                            <div class="flex-shrink-0"><span class="text-primary">Avril 2020 – Juillet 2020</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2020 – Mars 2021</span></div>
                         </div>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">IN'TEL</span> - Apllication mobile</h3>
-                                <div class="subheading mb-3">Java · NativeScript · SQLite ·Application hybride</div>
-                                <div>Développeur fullstack - 4 membres</div>
+                                <h3 class="mb-0"><span class="text-primary">E-security</span></h3>
+                                <div class="subheading mb-3">Docker · Kubernetes</div>
+                                <div>Docker & Kubernetes - 4 membres</div>
                                 </br>
-                                <p>Développement d'une application mobile dédiée à INTECH (planning, actualités, suivi/justification des absences, réservation de salle, chat entre étudiants ...).</p>
+                                <p>Création et orchestration de conteneurs avec l’aide des logiciels Docker et Kubernetes. Mise en œuvre d’un site vitrine renouvelable en cas d’attaque par le biais d’un script offrant un renouvellement du site.</p>
                             </div>
-                            <div class="flex-shrink-0"><span class="text-primary">Octobre 2019 – Janvier 2020</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">Mars 2020 – Juillet 2020</span></div>
                         </div>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">Ultimate Fight</span> - JEU VIDÉO</h3>
-                                <div class="subheading mb-3">C# · SFML</div>
-                                <div>Développeur fullstack - 3 membres</div>
+                                <h3 class="mb-0"><span class="text-primary">Mansible</span></h3>
+                                <div class="subheading mb-3">YAML</div>
+                                <div>Ansible - 4 membres</div>
                                 </br>
-                                <p>Développement du jeu de combat en 2D où 2 joueurs s'affrontent en un contre un en local ou en ligne.</p>
+                                <p>Par le biais d’un switch Cisco et du logiciel Ansible, configuration et déploiement de logiciels à l’aide de scripts YAML via une IHM sur l’ensemble de machines connectées au switch.</p>
+                            </div>
+                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2019 – Mars 2020</span></div>
+                        </div>
+                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                            <div class="flex-grow-1">
+                                <h3 class="mb-0"><span class="text-primary">BuildMaster</span> - Application Web</h3>
+                                <div class="subheading mb-3">PHP · HTML · CSS · mySQL</div>
+                                <div>Développement web - 4 membres</div>
+                                </br>
+                                <p>Développement d'un site web de location et de vente de biens (système de messagerie, location de biens, vente de biens, etc...).</p>
                             </div>
                             <div class="flex-shrink-0"><span class="text-primary">Mars 2019 – Juillet 2019</span></div>
                         </div>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">NetWork</span> - Application Web</h3>
-                                <div class="subheading mb-3">PHP · HTML · CSS · BOOTSTRAP · mySQL</div>
-                                <div>Développeur fullstack - 3 membres</div>
-                                </br>
-                                <p>Développement d'un réseau social (système de messagerie, ajout de contact, création de groupe, etc...).</p>
-                            </div>
-                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 – Janvier 2019</span></div>
-                        </div>
-                        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                            <div class="flex-grow-1">
-                                <h3 class="mb-0"><span class="text-primary">ALL'INTECH</span> - JEU WEB</h3>
+                                <h3 class="mb-0"><span class="text-primary">ROAD TO S2</span> - JEU WEB</h3>
                                 <div class="subheading mb-3">NODEJS · HTML · CSS</div>
-                                <div>Développeur fullstack - 3 membres</div>
+                                <div>Développement nodeJS - 3 membres</div>
                                 </br>
-                                <p>Développement d'un jeu de poker en ligne.</p>
+                                <p>Développement d'un escape game.</p>
                             </div>
-                            <div class="flex-shrink-0"><span class="text-primary">Mars 2018 – Juillet 2018</span></div>
+                            <div class="flex-shrink-0"><span class="text-primary">Septembre 2018 – Mars 2019</span></div>
                         </div>
                     </ul>
-                    <h3>PROJETS DE COMMUNICATION ÉTUDIANT :</h3>
+                    <h3>PROJET DE COMMUNICATION ÉTUDIANT :</h3>
                     <ul>
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                             <div class="flex-grow-1">
@@ -491,7 +491,7 @@
                                 <p><b>Projet BrailleNet :</b></p>
                                 <ul>
                                     <li>
-                                        Première partie
+                                        Association pour les malvoyants
                                         <ul>
                                             <li>
                                                 Mise en place d’un projet et d’un événement ayant pour but
