a finir les expériences

--- a/index.html
+++ b/index.html
@@ -361,10 +361,9 @@
                     <h2 class="mb-5">EXPÉRIENCES</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><span class="text-primary">CHANGER</span> - CHANGER</h3>
-                            <div class="subheading mb-3">CHANGER</div>
+                            <h3 class="mb-0"><span class="text-primary">FRET SNCF</span>CHEF DE PROJET - ALTERNANCE</h3>
                             <p>
-                                <h5>Rercherche et developement</h5>
+                                <h5>Recherche et developement</h5>
                                 · Méthode agile</br>
                                 · Création d'écrans d'administration</br>
                                 · Mise en place de calculs complexes liés a la consomation d'énergie de vehicules</br>
@@ -380,16 +379,13 @@
                                 · Mise en place de tests unitaires et tests d'intégration</br>
                                 · Réalisation de microservices</br>
                                 · Projet à l'international</br>
-
-
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Depuis Novembre 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Depuis Novembre 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><span class="text-primary">MEDECINDIRECT</span> - DÉVELOPPEUR MOBILE - STAGE</h3>
-                            <div class="subheading mb-3">KOTLIN · MVVM · APPLICATION NATIVE</div>
+                            <h3 class="mb-0"><span class="text-primary">FRET SNCF</span> REQUEST MANAGER - ALTERNANCE</h3>
                             <p>
                                 <h5>Application officielle</h5>
                                 · Méthode agile</br>
@@ -403,23 +399,7 @@
                                 · Formation en tant qu'assurance qualité</br>                                                                
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Septembre 2020 - Mars 2021</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><span class="text-primary">THALES</span> - DÉVELOPPEUR FULLSTACK - STAGE</h3>
-                            <div class="subheading mb-3">C# · Typescript · ANGULAR · ASP.NET CORE</div>
-                            <p>
-                                <h5>Application interne</h5>
-                                · Conceptualisation d'une application web</br>
-                                · Apprentissage des concept du developpement</br>
-                                · Preuve de concept</br>
-                                · Création et maintient de la documentation</br>
-                                · Animation et présentation du projet</br>
-                                                             
-                            </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Juillet 2019 - Août 2019</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Novembre 2021 - Novembre 2022</span></div>
                     </div>
                 </div>
             </section>
