--- a/index.html
+++ b/index.html
@@ -175,19 +175,19 @@
 
                     <div class="card-deck">
                         <div class="card">
-                          <img class="card-img-top img-thumbnail" src="./src/assets/img/lokalise.avif" alt="Card image cap">
+                          <img class="card-img-top img-thumbnail" src="./src/assets/img/lokalise.jfif" alt="Card image cap">
                           <div class="card-body">
-                            <h5 class="card-title">CENTRALISATION ET TRADUCTION DE DONNéES</h5>
-                            <p class="card-text">Dans les projets d'entreprise, il est souvent nécessaire de traduire des applications ou des sites web pour permettre à un public international d'y accéder. C'est là que l'outil Lokalise entre en jeu.</p>
+                            <h5 class="card-title">Main Courante Informatisée</h5>
+                            <p class="card-text">Dans les projets d'entreprise, il est souvent nécessaire de comprendre et traduire la demande client pour pouvoir obtenir une application ergonomique et viable.</p>
                             <!-- Large modal -->
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#lokalise">Voir plus</button>
                           </div>
                         </div>
                         <div class="card">
-                          <img class="card-img-top img-thumbnail" src="./src/assets/img/geowebp.webp" alt="Card image cap">
+                          <img class="card-img-top img-thumbnail" src="./src/assets/img/geowebp.jfif" alt="Card image cap">
                           <div class="card-body">
-                            <h5 class="card-title">géolocalisation de magasins</h5>
-                            <p class="card-text">Un projet mobile avec une fonctionnalité qui permet aux utilisateurs de trouver facilement les magasins les plus proches de leur position actuelle.</p>
+                            <h5 class="card-title">PowerBI</h5>
+                            <p class="card-text">Un projet avec une fonctionnalité qui permet aux utilisateurs d'utiliser un plus grand nombre de données à partir de celles retenues via l'application développée.</p>
                             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#geo">Voir plus</button>
                           </div>
                         </div>
